# Monte-Carlo-Raytracer

./: .gitattributes  CMakeLists.txt  README.md  ceilingvertices.txt  floorvertices.txt
other/: ceilingvertices.txt  wallvertices.txt
src/: basic_types.cpp  basic_types.hpp  brdf.cpp  brdf.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  lights.cpp  lights.hpp  main.cpp  photonmap.cpp  photonmap.hpp  ray.cpp  ray.hpp  raycastingfunctions.hpp  scene.cpp  scene.hpp  scenegeometry.cpp  scenegeometry.hpp  shapes.cpp  shapes.hpp  triangle.cpp  triangle.hpp  util.cpp  util.hpp
